# drapaiton.github.io

./: .env  .env_sample  .gitignore  README.md  \  handler.py  index.html  main.00333637806849369099.js  package-lock.json  package.json  pyproject.toml  scripts.0a79e5817019e5bb1890.js  serverless.yml
.run/: [Local] lambdas.endpoints.register_user_handler.run.xml
app/: serverless.yml
app/lambdas/: fetch_resources.py  new_resource.py  web-socket.py
app/lambdas/common/: config.py  models.py
lambdas/common/: ApiResponses.py  Crud.py  DynamoCrud.py  RedisManagers.py  WebSocketMessage.py
lambdas/endpoints/: register_user.py  send_message.py
lambdas/websockets/: connect.py  default.py  disconnect.py  message.py
src/: auth.py  fetch_resources.py  index.js  local_test_script.py  new_resource.py  serverless.yml  web-socket.py
src/common/: WebSocketMessage.py  config.py  responses.py
src/components/: App.js
src/components/ChatArea/: index.js  styles.css
src/components/ChatContainer/: index.js
src/components/ChatInformation/: index.js
src/components/ChatZone/: index.js  styles.css
src/components/RegisterForm/: index.js  styles.css
src/components/TextBox/: index.js  styles.css
src/components/hooks/: useSocket.js
src/containers/Dialog/: index.js
src/containers/SpeedDial/: index.js
src/containers/SpeedDials/: index.js
src/dynamo/: __init__.py  crud.py  user.py
src/hooks/: useAPI.js  useSocket.js  useStorage.js
src/lambdas/: auth.py  fetch_resources.py  new_resource.py  tests.py  web-socket.py
src/schemas/: send_message.json
(+21 files in other folders)
