[tool.poetry]
name = "drapaiton.github.io"
version = "0.1.0"
description = ""
authors = ["Sofia Escobedo <drapaiton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
boto3 = "^1.17.78"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
